# events_analyzer

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
analys_notes/: clasterization.ipynb
data/: enriched.csv  explanations.csv  prompts.xlsx  raw.csv  raw_2.csv  risk_matrix.csv  risk_vector.csv  ~$prompts.xlsx
schemas/: main_schemas.py
src/: model.py  openwebui_engine.py  vllm_engine.py
src/configs/: config.json  confis.json
src/data/: data_bytes.npy  data_col0.csv  enriched.csv  risk_matrix.csv  Итерация_2.xlsx  Показатели.xlsx  Показатели_2.xlsx  Показатели_Экономика_данных.xlsx
src/schemas/: main_schemas.py
src/utils/: __init__.py  data_loader.py  embeddings.py  embeddings_search.py
tests/: test_data_loader.py  test_embeddings.py  test_main_schemas.py  test_model.py  test_vllm_engine.py
