[project]
name = "events_analyzer"
version = "0.1.0"
description = "Система анализа событий"
authors = [
    { name = "Rashid Nabiev", email = "none@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Укажи, если есть зависимости, например:
    # "pandas", "numpy", "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]